--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="onboarding2">"Creating the perfect ambience for bedtime stories and helps children enhance their imaginary skills. "</string>
     <string name="next">Next</string>
     <string name="submit">Submit</string>
+    <string name="suggest">Suggest</string>
 </resources>
